--- a/config.org
+++ b/config.org
@@ -526,7 +526,8 @@
   (defun ak/refresh-org-agenda-files ()
      "Refresh org-agenda-files."
      (interactive)
-     (add-to-list 'org-agenda-files "~/pCloud Drive/_areas/aaron-work/emacs/daily"))
+      (setq org-agenda-clockreport-parameter-plist '(:stepskip0 t :link t :maxlevel 3 :fileskip0 t))
+      (setq org-agenda-files '("~/pCloud Drive/_areas/aaron-work/emacs/daily")))
 
     (ak/main-leader-key
       "cz" '(ak/refresh-org-agenda-files :wk "Refresh Agenda Files")
