--- a/config.org
+++ b/config.org
@@ -143,7 +143,7 @@
 
   (ak/generate-jump-functions
    "~/pCloud Drive/_areas/aaron-work/emacs/project-notes"
-   '("bookbrush.org" "trademarkia.org" "goclub.org" "seniornicity.org"))
+   '("passelz" "goclub.org" "seniornicity.org" "home-server"))
 
   (ak/generate-jump-functions
    "~/vanilla-emacs/config"
@@ -159,9 +159,8 @@
     "M-o b" '(ak/jump-to-books :wk "Books")
     "M-o h" '(ak/jump-to-home :wk "Home")
     "M-o p" '(:ignore t :wk "Projects")
-    "M-o pt" '(ak/jump-to-trademarkia :wk "Trademarkia")
+    "M-o ph" '(ak/jump-to-home-server :wk "Home Server")
     "M-o ps" '(ak/jump-to-seniornicity :wk "Seniornicity")
-    "M-o pb" '(ak/jump-to-bookbrush :wk "Bookbrush")
     "M-o pg" '(ak/jump-to-goclub :wk "Go Club"))
 #+END_SRC
 
@@ -503,7 +502,7 @@
                "* %? %^g")
               ("b" "Book" entry
                (file "~/pCloud Drive/_areas/aaron-work/emacs/org/books.org"))))
-      (setq org-agenda-clockreport-parameter-plist '(:stepskip0 t :link t :maxlevel 3 :fileskip0 t))
+      (setq org-agenda-clockreport-parameter-plist '(:stepskip0 t :link t :maxlevel 2 :fileskip0 t :filetitle nil :hidefiles t))
       (setq org-duration-format 'h:mm)
       (setq org-clock-total-time-cell-format "%s")
       (org-babel-do-load-languages
@@ -526,7 +525,7 @@
   (defun ak/refresh-org-agenda-files ()
      "Refresh org-agenda-files."
      (interactive)
-      (setq org-agenda-clockreport-parameter-plist '(:stepskip0 t :link t :maxlevel 3 :fileskip0 t))
+      (setq org-agenda-clockreport-parameter-plist '(:stepskip0 t :link t :maxlevel 2 :fileskip0 t :filetitle nil :hidefiles t))
       (setq org-agenda-files '("~/pCloud Drive/_areas/aaron-work/emacs/daily")))
 
     (ak/main-leader-key
@@ -559,7 +558,8 @@
           '(("d" "default" entry
              "* %?"
              :target (file+head "%<%Y-%m-%d>.org"
-                                "#+title: %<%Y-%m-%d>\n#+SEQ_TODO: TODO(t) WAITING(w) IN_PROGRESS(i) TOMORROW(m) | DONE(d) BACKLOGGED(b)"))))
+                                "#+title: %<%Y-%m-%d>\n#+SEQ_TODO: TODO(t) WAITING(w) IN_PROGRESS(i) TOMORROW(m) | DONE(d) BACKLOGGED(b)\n#+TAGS: { seniornicity(s) passelz(p) trademarkia(t) admin(a) }"))))
+    (setq org-tags-column '-80)
     (org-roam-db-autosync-mode))
 #+END_SRC
 ** Auto Archiving
@@ -570,25 +570,25 @@
   ;; matches yyyy-mm-dd.org pattern
   (setq daily-note-pattern "\\([0-9]\\{4\\}-[0-9]\\{2\\}-[0-9]\\{2\\}\\).org$")
 
-  (defun ak/org-archive-done-tasks ()
-    (when (eq major-mode 'org-mode)
-      (interactive)
-      (unless (string-match-p ".org_archive$" (buffer-file-name))
-        (org-map-entries
-         (lambda ()
-           ;; (if (string-match-p daily-note-pattern (buffer-file-name))
-               ;; for daily notes, move to a "Archive" subtree in the same file
-               (progn
-                 (funcall 'org-todo "")
-                 (funcall 'org-archive-to-archive-sibling))
-             ;; for other files, archive to a separate file
-             ;; (org-archive-subtree)
-             ;; )
-           (setq org-map-continue-from (outline-previous-heading)))
-         "/+DONE" 'file)
-        (save-buffer))))
+  ;; (defun ak/org-archive-done-tasks ()
+  ;;   (when (eq major-mode 'org-mode)
+  ;;     (interactive)
+  ;;     (unless (string-match-p ".org_archive$" (buffer-file-name))
+  ;;       (org-map-entries
+  ;;        (lambda ()
+  ;;          ;; (if (string-match-p daily-note-pattern (buffer-file-name))
+  ;;              ;; for daily notes, move to a "Archive" subtree in the same file
+  ;;              (progn
+  ;;                (funcall 'org-todo "")
+  ;;                (funcall 'org-archive-to-archive-sibling))
+  ;;            ;; for other files, archive to a separate file
+  ;;            ;; (org-archive-subtree)
+  ;;            ;; )
+  ;;          (setq org-map-continue-from (outline-previous-heading)))
+  ;;        "/+DONE" 'file)
+  ;;       (save-buffer))))
 
-  (add-hook 'after-save-hook 'ak/org-archive-done-tasks)
+  ;; (add-hook 'after-save-hook 'ak/org-archive-done-tasks)
 
   (defun ak/refile-tomorrow-tasks ()
     "Refile all tasks with the TODO keyword of TOMORROW or BACKLOG to the next day's daily note."
