--- a/config.org
+++ b/config.org
@@ -496,7 +496,7 @@
                "* %? %^g")
               ("b" "Book" entry
                (file "~/pCloud Drive/_areas/aaron-work/emacs/org/books.org"))))
-      (setq org-agenda-clockreport-parameter-plist '(:stepskip0 t :link t :maxlevel 2 :fileskip0 t :filetitle nil :hidefiles t))
+      (setq org-agenda-clockreport-parameter-plist '(:stepskip0 t :maxlevel 1 :fileskip0 t))
       (setq org-duration-format 'h:mm)
       (setq org-clock-total-time-cell-format "%s")
       (org-babel-do-load-languages
